--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,8 +30,8 @@ body {
 }
 
 a.link {
-  text-decoration: none;
-  @include accent-color(color); 
+  @include text-color(color); 
+  @include link-hover;
 }
 
 p {
@@ -60,6 +60,7 @@ footer {
     a {
       @include text-color(color);
       text-decoration: none;
+      @include link-hover;
     }
   }
   span {
