--- a/src/sass/werk.scss
+++ b/src/sass/werk.scss
@@ -5,12 +5,18 @@
       cursor: pointer;
       border: none;
       background: none;
-      font-size: .8em;
+      font-size: 0.8em;
       padding: 6px 16px;
       margin-left: 12px;
       border-radius: 20px;
       @include accent-color(color);
-      transition: color .3s ease-in-out, background-color .3s ease-in-out;
+      transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+      outline: none;
+      border: 1.5px solid transparent;
+      transition: border-color 0.3s ease-in-out;
+      &:focus {
+        border: 1.5px solid $accent-color;
+      }
       &.active {
         @include accent-color(background-color);
         @include bg-color(color);
@@ -41,26 +47,26 @@
         left: 46px;
         bottom: 28px;
         z-index: 1;
-        transition: bottom .3s ease-in-out;
+        transition: bottom 0.3s ease-in-out;
         h3 {
           font-size: 2.4em;
           padding-bottom: 6px;
-          transition: padding-bottom .3s ease-in-out;
+          transition: padding-bottom 0.3s ease-in-out;
         }
         span {
-          opacity: .6;
+          opacity: 0.6;
           text-transform: capitalize;
         }
       }
       &:after {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         @include image-gradient;
-        opacity: .4;
+        opacity: 0.4;
       }
       &:hover {
         .project__info {
